crates/api-snowflake-rest/src/tests/snapshots/compatible/set_command_show_variables.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_api.rs
description: "SQL #1 [spent: 1028/1653ms]: SHOW VARIABLES\nQuery UUID: 019ba0a2-7c9d-7f31-accb-d20a0622ba57"
expression: snapshot
---
SHOW VARIABLES
{
  "data": {
    "rowtype": [
      {
        "name": "session_id",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": true,
        "type": "text",
        "byteLength": 16777216,
        "length": 16777216,
        "scale": null,
        "precision": null,
        "collation": null
      },
      {
        "name": "name",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": false,
        "type": "text",
        "byteLength": 16777216,
        "length": 16777216,
        "scale": null,
        "precision": null,
        "collation": null
      },
      {
        "name": "value",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": true,
        "type": "text",
        "byteLength": 16777216,
        "length": 16777216,
        "scale": null,
        "precision": null,
        "collation": null
      },
      {
        "name": "type",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": true,
        "type": "text",
        "byteLength": 16777216,
        "length": 16777216,
        "scale": null,
        "precision": null,
        "collation": null
      },
      {
        "name": "comment",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": true,
        "type": "text",
        "byteLength": 16777216,
        "length": 16777216,
        "scale": null,
        "precision": null,
        "collation": null
      },
      {
        "name": "created_on",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": true,
        "type": "text",
        "byteLength": 16777216,
        "length": 16777216,
        "scale": null,
        "precision": null,
        "collation": null
      },
      {
        "name": "updated_on",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": true,
        "type": "text",
        "byteLength": 16777216,
        "length": 16777216,
        "scale": null,
        "precision": null,
        "collation": null
      }
    ],
    "rowsetBase64": null,
    "rowset": [],
    "total": 0,
    "returned": 0,
    "queryResultFormat": "json",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
